--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
 			<!-- ************* -->
 
 			<section>
-				<section class="shipster-chart-slide">
-					<div class="shipster-chart-container">
-						<canvas id="ShipsterFinance1"></canvas>
+				<section class="chart-slide">
+					<div class="chart-container">
+						<canvas id="Finance1"></canvas>
 					</div>
 				</section>
 			</section>
