--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		
 			<section class="no-bg">
 				<div class="dcug-logo"></div>
-				<h2>DCUG @ bol.com</h2>
+				<h2>DCUG @ Google</h2>
 			</section>
 
 			<!-- ************* -->
@@ -100,13 +100,13 @@
 				}
 			},
 			"color": {
-				"value": "#22bdf5"
+				"value": "#ffffff"
 			},
 			"shape": {
 				"type": "circle",
 				"stroke": {
 				"width": 0,
-				"color": "#22bdf5"
+				"color": "#ffffff"
 				},
 				"polygon": {
 				"nb_sides": 5
@@ -118,7 +118,7 @@
 				}
 			},
 			"opacity": {
-				"value": 0.5,
+				"value": 1,
 				"random": false,
 				"anim": {
 				"enable": false,
@@ -141,7 +141,7 @@
 				"enable": true,
 				"distance": 150,
 				"color": "#ffffff",
-				"opacity": 0.4,
+				"opacity": 1,
 				"width": .5
 			},
 			"move": {
