updated read me and libs page

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 	<link rel="stylesheet" href="css/reveal/default.css">
 	<link href="https://fonts.googleapis.com/css?family=Unica+One|Julius+Sans+One|Pacifico|Permanent+Marker|Leckerli+One|Libre+Barcode+39+Extended+Text" rel="stylesheet">
 	<link rel="stylesheet" href="css/font-awesome/font-awesome.css">
-	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="css/devices/devices.css" type="text/css">
+	<link rel="stylesheet" href="css/main.css">
 	<script src="js/vendor/modernizr-2.8.3.min.js"></script>
 	<script src="js/vendor/reveal/index.js"></script>
 
@@ -35,6 +35,7 @@
 			<section class="no-bg">
 				<div class="dcug-logo"></div>
 				<h2>DCUG @ Google</h2>
+				<a class="mint" href="https://www.meetup.com/nl-NL/DCUGNL/events/245923039/">1 maart 2018 - Meetup dutch chatbot user group</a>
 			</section>
 
 			<!-- ************* -->
@@ -44,11 +45,14 @@
 				<section class="no-bg align-left">
 					<!-- text -->
 					<div class="phone-text">
-						<h2>DCUG</h2>
-						<h3 class="text-shade mint">sub</h3>
+						<h2>Agenda</h2>
+						<h3 class="text-shade mint">Libs:
+						</h3>
 						<hr>
 						<ul>
-							<li>item</li>
+							<li><a href="https://vincentgarreau.com/particles.js/">Particles.js</a></li>
+							<li><a href="http://www.chartjs.org/">charts.js</a></li>
+							<li><a href="https://picturepan2.github.io/devices.css/">devices.css</a></li>
 						</ul>
 					</div>
 
